--- a/ng-app/app/index.jade
+++ b/ng-app/app/index.jade
@@ -2,7 +2,7 @@ doctype html
 html.no-js
   head
     meta(charset="utf-8")
-    title ESOTEC Business Solutions
+    title Barnacle Translations
     meta(name="description", content="")
     meta(name="viewport", content="width=device-width")
     link(href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700", rel="stylesheet", type="text/css")
