--- a/ng-app/app/views/main.jade
+++ b/ng-app/app/views/main.jade
@@ -204,50 +204,50 @@
             //-         span.input-group-btn
             //-           button.btn.btn-theme-color.btn-lg(type="submit") OK
 
-  section#work.padding-80
-    .work-section-2
-      .container
-        .row
-          .col-md-12.text-center.margin-btm-40
-            .section-heading.text-center
-              h2.large.section-title Our valuable team
+  //- section#work.padding-80
+  //-   .work-section-2
+  //-     .container
+  //-       .row
+  //-         .col-md-12.text-center.margin-btm-40
+  //-           .section-heading.text-center
+  //-             h2.large.section-title Our valuable team
 
-          .col-md-12.team-line.margin-btm-40.wow.animated.fadeInDown(data-wow-delay='.4s')
-            .row
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-1.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='john Doe - CEO')
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-2.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Melinda - Manager')
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-3.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Erick - Founder')
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-4.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Edward - Developer')
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-5.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Kirk - Senior Developer')
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-6.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Greem - CEO, Founder')
+  //-         .col-md-12.team-line.margin-btm-40.wow.animated.fadeInDown(data-wow-delay='.4s')
+  //-           .row
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-1.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='john Doe - CEO')
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-2.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Melinda - Manager')
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-3.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Erick - Founder')
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-4.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Edward - Developer')
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-5.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Kirk - Senior Developer')
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-6.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Greem - CEO, Founder')
 
-          .col-md-12.team-line.margin-btm-40.wow.animated.fadeInUp(data-wow-delay='.8s')
-            .row
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-7.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Steven - Graphics designer')
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-8.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='henricks - Senior Designer')
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-9.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Victoria - Hr')
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-10.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Anjelina - Designer')
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-11.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='john Smith - Senior Hr')
-              .col-md-2.col-sm-4.col-xs-12
-                img(src='images/team-12.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='john - Sales manager')
+  //-         .col-md-12.team-line.margin-btm-40.wow.animated.fadeInUp(data-wow-delay='.8s')
+  //-           .row
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-7.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Steven - Graphics designer')
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-8.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='henricks - Senior Designer')
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-9.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Victoria - Hr')
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-10.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='Anjelina - Designer')
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-11.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='john Smith - Senior Hr')
+  //-             .col-md-2.col-sm-4.col-xs-12
+  //-               img(src='images/team-12.jpg', alt='team', data-toggle='tooltip', title='', data-original-title='john - Sales manager')
 
 
-    .pricing-section-2
-      .container.text-center.wow.animated.bounceIn
-        //- h1 have creative ideas? let help us
-        //- p
-        //-   a.btn.btn-lg.btn-theme-color(href="#contact") Contact us
+  //-   .pricing-section-2
+  //-     .container.text-center.wow.animated.bounceIn
+  //- h1 have creative ideas? let help us
+  //- p
+  //-   a.btn.btn-lg.btn-theme-color(href="#contact") Contact us
 
   section#contact.padding-80
     .contact-sec-1
@@ -333,9 +333,9 @@
           .contact-col.wow.animated.flipInY(data-wow-delay=".3s")
             i.ion-location
             p
-              | 124,munnawali jaipur
+              | London
               br
-              | 302012, Perú
+              | UK
 
   section#footer.padding-80
     .container
