--- a/ng-app/app/views/main.jade
+++ b/ng-app/app/views/main.jade
@@ -17,7 +17,7 @@
         h2.slide-btm-text -- Business and corporate translations --
         .home-arrow-down.text-center
           p
-            a.btn.btn-lg.btn-theme-color.scroll(href="#about") quote us now!
+            a.btn.btn-lg.btn-theme-color.scroll(href="#contact") quote us now!
 
   section#navigation
     .navbar.navbar-default.navbar-static-top(role="navigation")
@@ -37,8 +37,8 @@
               a.scroll(href="#about") About
             li
               a.scroll(href="#services") Services
-            li
-              a.scroll(href="#work") Work
+            //- li
+            //-   a.scroll(href="#work") Work
             li
               a.scroll(href="#contact") Contact
 
@@ -53,7 +53,7 @@
         .row
           .col-md-12.col-sm-12
             .about-more-info.wow.animated.fadeInDown(data-wow-duration="0.3s")
-              p.bigger
+              p.paint-letter.bigger
                 | Barnacle translations is a translations, and proofreading company dedicated in delivering quality services to businesses wishing to communicate and do business in an ever increasing global market.
               p.bigger
                 | At Barnacle translations, we have a highly organised and efficient team used to handling and dealing with incoming requests from around the world.
@@ -108,52 +108,33 @@
           h2.large.section-title Our Services
       .container
         .row
-          .col-md-12
+          .col-md-6
             .margin-btm-40
               //- h4 Flexibility built in
-              p.bigger
+              p.paint-letter.bigger
                 | We offer services in translation, editing and proofreading as well as transcription to people and business in the UK and beyond.
               p.bigger
                 | We are a company that has been active since 2012, offering companies the very best in translation services. As a result of our success, our company has largely expanded since its beginnings and is currently working with companies both at a regional level as well as internationally. Notably with many clients coming from Latin America.
-        .row
+
           .col-md-6.wow.animated.fadeInLeft(data-wow-delay="0.3s")
             .row.margin-btm-20
-              .col-md-10
-                .services-icon
-                  h3.left Translations
               .col-md-2
                 .services-icon
                   i.ion-images
+              .col-md-10
+                .services-icon
+                  h3.left Translations
                   //- p
                   //-   | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget viverra augue. Nunc dignissim rutrum tempor.
             .row.margin-btm-20
-              .col-md-10
-                .services-icon
-                  h3.left Editing
               .col-md-2
                 .services-icon
                   i.ion-compose
+              .col-md-10
+                .services-icon
+                  h3.left Editing
                   //- p
                   //-   | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget viverra augue. Nunc dignissim rutrum tempor.
-            //- .row.margin-btm-20
-            //-   .col-md-2
-            //-     .services-icon
-            //-       i.ion-leaf
-            //-   .col-md-10
-            //-     .services-icon
-            //-       h3 Logo design
-            //-       p
-            //-         | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget viverra augue. Nunc dignissim rutrum tempor.
-            //- .row.margin-btm-20
-            //-   .col-md-2
-            //-     .services-icon
-            //-       i.ion-speedometer
-            //-   .col-md-10
-            //-     .services-icon
-            //-       h3 Search engine optimization(seo)
-            //-       p
-            //-         | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget viverra augue. Nunc dignissim rutrum tempor.
-          .col-md-6.wow.animated.fadeInRight(data-wow-delay="0.6s")
             .row.margin-btm-20
               .col-md-2
                 .services-icon
@@ -177,6 +158,25 @@
             //-     .services-icon
             //-       i.ion-leaf
             //-   .col-md-10
+            //-     .services-icon
+            //-       h3 Logo design
+            //-       p
+            //-         | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget viverra augue. Nunc dignissim rutrum tempor.
+            //- .row.margin-btm-20
+            //-   .col-md-2
+            //-     .services-icon
+            //-       i.ion-speedometer
+            //-   .col-md-10
+            //-     .services-icon
+            //-       h3 Search engine optimization(seo)
+            //-       p
+            //-         | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget viverra augue. Nunc dignissim rutrum tempor.
+          //- .col-md-6.wow.animated.fadeInRight(data-wow-delay="0.6s")
+            //- .row.margin-btm-20
+            //-   .col-md-2
+            //-     .services-icon
+            //-       i.ion-leaf
+            //-   .col-md-10
             //-     .services-info
             //-       h3 Logo design
             //-       p
@@ -190,10 +190,10 @@
             //-       h3 Search engine optimization(seo)
             //-       p
             //-         | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget viverra augue. Nunc dignissim rutrum tempor.
-    .services-section-2.wow.animated.fadeInUp(data-wow-delay=".4s")
-      .container
-        .row
-          .col-md-12.text-center
+            //- .services-section-2.wow.animated.fadeInUp(data-wow-delay=".4s")
+            //-   .container
+            //-     .row
+            //-       .col-md-12.text-center
             //- h1 Subscribe to Newsletter
             //- form.newsletter-form
             //-   .row
@@ -203,7 +203,16 @@
             //-         input#subscribe-email.form-control(type="email", placeholder="Enter your email")
             //-         span.input-group-btn
             //-           button.btn.btn-theme-color.btn-lg(type="submit") OK
-
+    .purchase-now
+      .container
+        .row
+          .col-sm-8
+            //- h1.wow.animated.fadeInLeft(data-wow-delay="0.3s")
+            //-   | Using Design as a
+            //-   strong Business
+            //-   | Strategy
+          .col-sm-4
+            //- a.btn.btn-lg.btn-theme-color.wow.animated.bounceIn(href="#", data-wow-delay="0.6s")  Purchase Now
   //- section#work.padding-80
   //-   .work-section-2
   //-     .container
