--- a/ng-app/app/styles/main.css
+++ b/ng-app/app/styles/main.css
@@ -75,7 +75,11 @@ a:focus {
 #home {
 background-color: #444;
 background-position: center 0%;
-background-size: auto;
+/*background-size: auto;*/
+-webkit-background-size: cover !important;
+-moz-background-size: cover !important;
+-o-background-size: cover !important;
+background-size: cover !important;
 background-repeat: repeat;
 background-attachment: fixed;
 background-image: url('../images/slide-bg.jpg');
@@ -94,9 +98,9 @@ left: 0;
 top: 0;
 width: 100%;
 height: 100%;
-background-image: url('../images/pattern.png');
+background-image: url('../images/pattern2.png');
 background-repeat: repeat;
-background-color: rgba(44,62,80,0.6);
+/*background-color: rgba(44,62,80,0.6);*/
 z-index: 2;
 }
 .home-content {
@@ -419,6 +423,9 @@ social icons css here
 /****************************
 About section
 ****************************/
+.about-section{
+    padding-bottom: 160px;
+}
 .about-box{
     margin-bottom: 40px;
 }
@@ -441,10 +448,15 @@ About section
 .about-more-info{
     margin-bottom: 30px;
 }
-.about-more-info p:first-letter{
+/*.about-more-info p:first-letter{
     color:#35bdf6;
     font-weight: 400;
     font-size: 20px;
+}*/
+p.paint-letter:first-letter{
+    color:#35bdf6;
+    font-weight: 400;
+    font-size: 34px;
 }
 .skills-wrapper{
     margin-bottom: 30px;
@@ -472,7 +484,7 @@ h3.heading-progress {
 }
 /*purchase now section*/
 .purchase-now{
-    background: url('../images/bread-bg.jpg') no-repeat center center fixed;
+    background: url('../images/whale-bg2.jpg') no-repeat center center fixed;
     width:100%;
     padding: 70px 0;
     -webkit-background-size: cover;
@@ -497,26 +509,32 @@ position: relative;
 ***********************************/
 
 .services-section-1{
-    margin-bottom: 30px;
+    /*margin-bottom: 30px;*/
+    padding-bottom: 160px;
 }
 .services-icon i{
-    color:#333;
+    /*border: 2px solid #16CFFA;*/
+    /*color:#333;*/
+    color: #f3f3f3;
     font-size: 24px;
     width:60px;
     height: 60px;
     line-height: 60px;
     text-align: center;
-    background-color: #f6f6f6;
+    /*background-color: #f6f6f6;*/
+    background-color: #35bdf6;
     border-radius: 32px;
     -webkit-border-radius: 32px;
-        -webkit-transition: all 200ms ease-in;
+    -webkit-transition: all 200ms ease-in;
     -o-transition: all 200ms ease-in;
     -moz-transition: all 200ms ease-in;
     transition: all 200ms ease-in;
 }
 .services-icon i:hover{
-    background-color: #333;
-    color:#f6f6f6;
+    /*background-color: #333;*/
+    background-color: #f6f6f6;
+    /*color:#f6f6f6;*/
+    color:#333;
 }
 .services-info h3{
     margin-top: 0;
@@ -1065,13 +1083,15 @@ p.bigger{
 }
 
 .services-icon h3{
-    color: #333;
+    /*color: #333;*/
+    color: #f3f3f3;
     font-size: 24px;
     /*width: 60px;*/
     height: 60px;
     line-height: 60px;
     text-align: center;
-    background-color: #f6f6f6;
+    /*background-color: #f6f6f6;*/
+    background-color: #35bdf6;
     border-radius: 32px;
     -webkit-border-radius: 32px;
     transition: all 200ms ease-in;
