--- a/ng-app/app/styles/main.css
+++ b/ng-app/app/styles/main.css
@@ -102,6 +102,7 @@ background-image: url('../images/pattern2.png');
 background-repeat: repeat;
 /*background-color: rgba(44,62,80,0.6);*/
 z-index: 2;
+opacity: 0.6;
 }
 .home-content {
 position: relative;
@@ -115,6 +116,7 @@ h1.slide-logo{
     margin-bottom: 40px;
     font-weight: 300;
     text-transform: uppercase;
+    /*text-shadow: 0px 4px 6px rgba(0, 0, 0, 1);*/
 }
 h2.slide-btm-text{
      font-family: 'Open Sans', sans-serif !important;
