--- a/ng-app/app/views/main.jade
+++ b/ng-app/app/views/main.jade
@@ -118,37 +118,37 @@
 
           .col-md-6
             .row.margin-btm-20.wow.animated.fadeInRight(data-wow-delay="0.3s")
-              .col-md-2
+              .col-sm-2
                 .services-icon
                   i.ion-images
-              .col-md-10
+              .col-sm-10
                 .services-icon
                   h3.left Translations
                   //- p
                   //-   | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget viverra augue. Nunc dignissim rutrum tempor.
             .row.margin-btm-20.wow.animated.fadeInRight(data-wow-delay="0.5s")
-              .col-md-2
+              .col-sm-2
                 .services-icon
                   i.ion-compose
-              .col-md-10
+              .col-sm-10
                 .services-icon
                   h3.left Editing
                   //- p
                   //-   | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget viverra augue. Nunc dignissim rutrum tempor.
             .row.margin-btm-20.wow.animated.fadeInRight(data-wow-delay="0.7s")
-              .col-md-2
+              .col-sm-2
                 .services-icon
                   i.ion-chatbox-working
-              .col-md-10
+              .col-sm-10
                 .services-icon
                   h3 Transcription
                   //- p
                   //-   | We use the latest technology to give you the best solution for your Internet presence.
             .row.margin-btm-20.wow.animated.fadeInRight(data-wow-delay="0.9s")
-              .col-md-2
+              .col-sm-2
                 .services-icon
                   i.ion-checkmark
-              .col-md-10
+              .col-sm-10
                 .services-icon
                   h3 Proofreading
                   //- p
