--- a/ng-app/app/views/main.jade
+++ b/ng-app/app/views/main.jade
@@ -51,7 +51,7 @@
           h2.large.section-title About us
       .container
         .row
-          .col-md-12.col-sm-12
+          .col-md-6.col-sm-6
             .about-more-info.wow.animated.fadeInDown(data-wow-duration="0.3s")
               p.paint-letter.bigger
                 | Barnacle translations is a translations, and proofreading company dedicated in delivering quality services to businesses wishing to communicate and do business in an ever increasing global market.
@@ -108,7 +108,7 @@
           h2.large.section-title Our Services
       .container
         .row
-          .col-md-6.wow.animated.fadeInLeft(data-wow-delay="0.3s")
+          .col-md-6.services.wow.animated.fadeInLeft(data-wow-delay="0.3s")
             .margin-btm-40
               //- h4 Flexibility built in
               p.paint-letter.bigger
