--- a/ng-app/app/index.jade
+++ b/ng-app/app/index.jade
@@ -4,7 +4,8 @@ html.no-js
     meta(charset="utf-8")
     title Barnacle Translations
     meta(name="description", content="")
-    meta(name="viewport", content="width=device-width")
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     link(href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700", rel="stylesheet", type="text/css")
     link(href="http://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800", rel="stylesheet", type="text/css")
     // Place favicon.ico and apple-touch-icon.png in the root directory
@@ -20,7 +21,7 @@ html.no-js
     link(rel="stylesheet", href="styles/flexslider.css")
     link(rel="stylesheet", href="styles/ionicons.css")
     // endbuild
-  body(ng-app="ngAppApp")
+  body(ng-app="ngAppApp", data-spy="scroll", data-target="#navigation", data-offset="80")
     .main-container(ng-view="")
     //if lt IE 7
       p.browsehappy
