--- a/ng-app/app/styles/main.css
+++ b/ng-app/app/styles/main.css
@@ -169,6 +169,13 @@ bootstrap navbar overrides
     -moz-box-shadow:0 1px 5px rgba(0, 0, 0, 0.15);
     box-shadow:0 1px 5px rgba(0, 0, 0, 0.15);
 }
+
+.img-shadow{
+    -webkit-box-shadow: 0 0px 4px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow:0 0px 4px rgba(0, 0, 0, 0.75);
+    box-shadow:0 0px 4px rgba(0, 0, 0, 0.75);
+}
+
 .navbar-default .navbar-nav > li > a {
     color: #000;
 text-transform: uppercase;
