--- a/ng-app/app/views/main.jade
+++ b/ng-app/app/views/main.jade
@@ -54,7 +54,7 @@ section#about.padding-80
         .col-md-7.col-sm-7
           .about-more-info
             p.paint-letter.bigger.wow.animated.fadeInDown(data-wow-delay="0.3s")
-              | Barnacle translations is a translations, and proofreading company dedicated in delivering quality services to businesses wishing to communicate and do business in an ever increasing global market.
+              | Barnacle Translations is a translations, and proofreading company dedicated in delivering quality services to businesses wishing to communicate and do business in an ever increasing global market.
             p.bigger.wow.animated.fadeInDown(data-wow-delay="0.4s")
               | We are a company that has been active since 2012, offering companies the very best in translation, editing and proofreading as well as transcription to people and business in the UK and beyond.
             p.bigger.wow.animated.fadeInDown(data-wow-delay="0.5s")
