--- a/ng-app/app/index.jade
+++ b/ng-app/app/index.jade
@@ -2,7 +2,7 @@ doctype html
 html.no-js
   head
     meta(charset="utf-8")
-    title Barnacle Translations
+    title Barnacle Translations - translations, transcriptions, proofreading and editing services
     meta(name="description", content="")
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
