--- a/app/views/layouts/mail.haml
+++ b/app/views/layouts/mail.haml
@@ -243,7 +243,7 @@
               %tr
                 %td
                   %h1{ style: "color: white; font-weight: 300; font-size: 36px; text-align: center;" }
-                    ESOTEC
+                    Barnacle Translations
                   = #image_tag attachments['logo.png'].url, :style => "outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; width: auto; max-width: 100%; float: left; clear: both; display: block;", :align=>"left"
                 %td{align: "right"}
                   %h6.collapse
@@ -270,14 +270,10 @@
                               %h5
                                 Contact Us:
                               %p
-                                Telephone:
-                                %strong
-                                  000-0000
-                                %br
                                 Email:
                                 %strong
-                                  %a{href: "emailto:info@esotecsolutions.com"}
-                                    info@esotecsolutions.com
+                                  %a{href: "emailto:info@barnacletranslations.com"}
+                                    info@barnacletranslations.com
                         %span.clear
           %td
 
@@ -292,6 +288,4 @@
                 %tr
                   %td{align: "center"}
                     %p
-                      %a{href: "#"}
-                        Terms & Conditions
           %td
